@@ -1,3 +1,7 @@
+2013-03-15  Vineet Gupta <vgupta@synopsys.com>
+
+	* build-uclibc.sh: No need to copy Linux sources
+
 2013-03-04  Simon Cook  <simon.cook@embecosm.com>
 
 	* build-elf32.sh: Add support for building big endian ELF tool chain.
